@@ -45,16 +45,16 @@ public class MultipleCommitTest {
     final ISession session = Session.beginSession(PATH);
     final IWriteTransaction wtx = session.beginWriteTransaction();
     TestCase.assertEquals(0L, wtx.getRevisionNumber());
-    TestCase.assertEquals(2L, wtx.getRevisionSize());
+    TestCase.assertEquals(2L, wtx.getNodeCount());
     wtx.commit();
 
     wtx.insertElementAsFirstChild("foo", "");
     TestCase.assertEquals(1L, wtx.getRevisionNumber());
-    TestCase.assertEquals(3L, wtx.getRevisionSize());
+    TestCase.assertEquals(3L, wtx.getNodeCount());
     wtx.abort();
 
     TestCase.assertEquals(1L, wtx.getRevisionNumber());
-    TestCase.assertEquals(2L, wtx.getRevisionSize());
+    TestCase.assertEquals(2L, wtx.getNodeCount());
     wtx.close();
 
     session.close();
@@ -68,7 +68,7 @@ public class MultipleCommitTest {
     wtx.close();
 
     final IReadTransaction rtx = session.beginReadTransaction();
-    Assert.assertEquals(12, rtx.getRevisionSize());
+    Assert.assertEquals(12, rtx.getNodeCount());
     rtx.close();
     session.close();
   }
